mostly got working with nodetodocli
