# api/models/user.model.js
@@ -1,0 +1,60 @@
+var mongoose = require('mongoose'),
+	crypto = require('crypto'),
+	Schema = mongoose.Schema;
+
+var UserSchema = new Schema({
+	name: String,
+	email: String,
+	username: {
+		type: String,
+		trim: true,
+		unique: true
+	},
+	password: String,
+	provider: String,
+	providerId: String,
+	providerData: {},
+	todos: {}//we will use this in the next tutorial to store TODOs
+});
+
+UserSchema.pre('save',
+	function(next) {
+		if (this.password) {
+			var md5 = crypto.createHash('md5');
+			this.password = md5.update(this.password).digest('hex');
+		}
+
+		next();
+	}
+);
+
+UserSchema.methods.authenticate = function(passwordInPlainTxt) {
+	var md5 = crypto.createHash('md5');
+	md5 = md5.update(passwordInPlainTxt).digest('hex');
+
+	return this.password === md5;
+};
+
+UserSchema.statics.findUniqueUsername = function(username, suffix, callback) {
+	var _this = this;
+	var possibleUsername = username + (suffix || '');
+
+	_this.findOne(
+		{username: possibleUsername},
+		function(err, user) {
+			if (!err) {
+				if (!user) {
+					callback(possibleUsername);
+				}
+				else {
+					return _this.findUniqueUsername(username, (suffix || 0) + 1, callback);
+				}
+			}
+			else {
+				callback(null);
+			}
+		}
+	);
+};
+
+mongoose.model('User', UserSchema);
